arm/dt: 8084-moto: Configure CHG_GOOD_N gpio
Configure the wireless charger's CHG_GOOD_N GPIO as digital input with
no pull. The line is externally pulled high causing it to float at
random voltages during various states of the system due to it being
internally pulled low by default. This was leading to the PMIC detecting
this signal as going low for which it had pre-programmed boot sequence
to disable L22. That sequence has been removed but we should still fix
this so wireless charging is able to use its resources properly.

Change-Id: I23f32c445458ab59d7fa1669a81253cdbf0d6e01
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/620330
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -460,6 +460,12 @@
 	};
 
 	gpio@c500 { /* GPIO 6 */
+		/* Wireless Charging - CHG_GOOD_N */
+		qcom,mode = <0>;        /* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <5>;        /* QPNP_PIN_PULL_NO */
+		qcom,vin-sel = <2>;     /* QPNP_PIN_VIN2 (S4 - 1.8V) */
+		qcom,src-sel = <0>;     /* QPNP_PIN_SEL_FUNC_CONSTANT */
+		qcom,master-en = <1>;
 	};
 
 	gpio@c600 { /* GPIO 7 */
