arm/dts: quark: PCIE0 is powered from L3 in Quark P1
Update the default Quark settng to use L3 to power PCIE0 and set the P0
apart as the exception.

Change-Id: Ib9633d3b46cb5a6fcdb171c096710e558b3f59be
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/620378
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
@@ -14,6 +14,17 @@
 #include "dsi-panel-mot-dummy-qhd-video.dtsi"
 #include "dsi-panel-mot-smd-QHD-cmd.dtsi"
 
+/ {
+	model = "Motorola APQ 8084 Quark";
+	compatible = "qcom,apq8084-quark",
+		   "qcom,apq8084-moto",
+		   "qcom,apq8084";
+};
+
+&pcie0 {
+	vreg-0.9-supply = <&pma8084_l3>;
+};
+
 &pma8084_l22 {
 	regulator-always-on;
 };
@@ -47,4 +58,10 @@
 	qcom,dsi-pref-prim-pan = <&mot_smd_QHD_1_cmd_v0>;
 	/delete-property/ vdd-supply;
 	/delete-node/ qcom,platform-supply-entry1;
+};
+
+&soc {
+	sound {
+		qcom,ext_hs_detect = "tpa6165";
+	};
 };
