arm/dt: apq8084: backlight mode for second panel
Add missing backlight mode parameter. The setting should be
identical for both panels. Otherwise second panel dt init
allocates PWM generator for LCD backlight we do not have.

Change-Id: I9453cd506d91af116f85c4948ba0c8418df424c7
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/620383
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Bang Nguyen <bangnguyen@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
@@ -169,6 +169,7 @@
 		qcom,mdss-dsi-bl-max-level = <255>;
 		qcom,mdss-dsi-dma-trigger = "trigger_sw";
 		qcom,mdss-dsi-mdp-trigger = "none";
+		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 		qcom,mdss-dsi-te-pin-select = <1>;
 		qcom,mdss-dsi-te-v-sync-rd-ptr-irq-line = <0x2c>;
 		qcom,mdss-dsi-te-v-sync-continues-lines = <0x3c>;
