arm: dts: Add lm3646 flash driver node to camera DTSI.
Add lm3646 flash driver node to Lexington/Quark camera DTSI.

Change-Id: I791ea991c9c093d353bb8f22e5020903965b6a63
Signed-off-by: Rob Kubicki <w17311@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/620682
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Elena Satraitis <esatrait@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
@@ -20,6 +20,24 @@
 		qcom,cci-master = <0>;
 	};
 
+	lm3646_led_flash: qcom,lm3646@ce {
+		cell-index = <0>;
+		reg = <0xce>;
+		qcom,slave-id = <0xce 0x00 0x11>;
+		compatible = "qcom,lm3646";
+		qcom,flash-name = "lm3646";
+		label = "lm3646";
+		qcom,flash-type = <1>;
+		qcom,gpio-no-mux = <0>;
+		gpios = <&msmgpio 144 0>;
+		qcom,gpio-flash-en = <0>;
+		qcom,gpio-req-tbl-num = <0>;
+		qcom,gpio-req-tbl-flags = <0>;
+		qcom,gpio-req-tbl-label = "FLASH_EN";
+		qcom,cci-master = <0>;
+		flash-now-support = <0>;
+	};
+
 	qcom,camera@20 {
 		cell-index = <0>;
 		compatible = "qcom,camera";
@@ -28,6 +46,7 @@
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
 		qcom,actuator-src = <&rohm_bu64296gwx>;
+		qcom,led-flash-src = <&lm3646_led_flash>;
 		qcom,mount-angle = <90>;
 		qcom,sensor-name = "imx220";
 		cam_vdig-supply = <&pma8084_l27>;
