--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -686,4 +686,5 @@ source "drivers/misc/mei/Kconfig"
 source "drivers/misc/vmw_vmci/Kconfig"
 source "drivers/misc/qcom/Kconfig"
 source "drivers/misc/stm401/Kconfig"
+source "drivers/misc/capsense_prog/Kconfig"
 endmenu
