--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -27,6 +27,18 @@
 		qca,bt-reset-gpio = <&pma8084_gpios 4 0>; /* BT_EN */
 		qca,bt-vdd-pa-supply = <&wlan_vreg>;
 	};
+
+	cycapsense_prog {
+			compatible = "cypress,cycapsense_prog";
+			label = "cy8c20247_24lkxi";
+			silicon_id = <0x0143>;
+			block_size = <128>;
+			num_of_blocks = <128>;
+			secure_bytes = <16>;
+			gpios = <&msmgpio 121 0>, /* RESET */
+				<&msmgpio 74 0>, /* programming SCLK */
+				<&msmgpio 73 0>; /* programming SDAT */
+	};
 };
 
 &wlan_vreg {
