--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -262,6 +262,7 @@ CONFIG_QSEECOM=y
 CONFIG_C55_CTRL=y
 CONFIG_QPNP_MISC=y
 CONFIG_TI_DRV2667=y
+CONFIG_CYPRESS_CAPSENSE_PROGRAMMING=y
 CONFIG_APQ8084_DOCKING_STATION=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
