--- a/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
@@ -49,6 +49,10 @@
 	qcom,mdss-pref-prim-intf = "dsi";
 };
 
+&vbat_disp_vreg {
+	regulator-boot-on;
+};
+
 &mdss_dsi0 {
 	qcom,dsi-pref-prim-pan = <&mot_smd_QHD_0_cmd_v0>;
 	qcom,platform-reset-gpio = <&msmgpio 86 0>;
@@ -64,6 +68,14 @@
 	qcom,dsi-pref-prim-pan = <&mot_smd_QHD_1_cmd_v0>;
 	/delete-property/ vdd-supply;
 	/delete-node/ qcom,platform-supply-entry1;
+};
+
+&mot_smd_QHD_0_cmd_v0 {
+	qcom,cont-splash-enabled;
+};
+
+&mot_smd_QHD_1_cmd_v0 {
+	qcom,cont-splash-enabled;
 };
 
 &soc {
