--- a/drivers/media/platform/msm/camera_v2/Kconfig
+++ b/drivers/media/platform/msm/camera_v2/Kconfig
@@ -246,6 +246,15 @@ config OV12830
 		snapshot config = 4224 * 3000 at 15 fps.
 		2 lanes max fps is 18, 4 lanes max fps is 24.
 
+config LEDS_LM3646
+	tristate "LM3646 driver"
+	depends on MSMB_CAMERA
+	---help---
+		This option enables support for the LM3646 LED controller. LM3646 is
+		a flash driver, can be used as Camera Flash, Torch, Message Indicator.
+		This Driver provides direct control via LED class and interface for
+		programming the controller.
+
 config MSM_V4L2_VIDEO_OVERLAY_DEVICE
 	tristate "Qualcomm MSM V4l2 video overlay device"
 	---help---
