arm/dts: apq8084/moto: Temp EQ40 Config
This adds a temporary battery profile for the EQ40
Battery pack.

Change-Id: I7ca7da0e25d2a35946789016840c22f2c3e8fa76
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/622321
SLTApproved: Slta Waiver <gerritmailarchive@motorola.com>
Tested-by: Jira Key <gerritmailarchive@motorola.com>
Reviewed-by: Jason Knopsnyder <gerritmailarchive@motorola.com>
Submit-Approved: Jira Key <gerritmailarchive@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -716,7 +716,37 @@
 		maxim,regs-init-data = <
 			0x01 0xff97 /* VALRT, VMAX = 5.1 V and VMIN = 3.02 V */
 		>;
+		maxim,enable_por_init;
 		maxim,batt_undervoltage_zero_soc;
+
+		maxim,configuration {
+			/* Temp Table from Maxim for 3900 mAhr Battery */
+			config		= /bits/ 16 <0x0214>;
+			full_soc_thresh	= /bits/ 16 <0x5A00>;	/* app note constant */
+			design_cap	= /bits/ 16 <7800>;	/* mAh */
+			ichgt_term	= /bits/ 16 <0x0066>;	/* battery attribute */
+			learn_cfg	= /bits/ 16 <0x2606>;	/* app note constant */
+			filter_cfg	= /bits/ 16 <0x87A4>;	/* app note constant */
+			relax_cfg	= /bits/ 16 <0x203B>;
+			fullcap		= /bits/ 16 <7800>;	/* mAh */
+			fullcapnom	= /bits/ 16 <7800>;	/* mAh */
+			qrtbl00		= /bits/ 16 <0x1804>;	/* battery attribute */
+			qrtbl10		= /bits/ 16 <0x0B00>;	/* battery attribute */
+			qrtbl20		= /bits/ 16 <0x0700>;	/* battery attribute */
+			qrtbl30		= /bits/ 16 <0x0600>;	/* battery attribute */
+			rcomp0 		= /bits/ 16 <0x0051>;	/* battery attribute */
+			tcompc0		= /bits/ 16 <0x242E>;	/* battery attribute */
+			maxim,cell-char-tbl = /bits/ 16 <	/* battery attribute */
+				0x9FB0 0xB5E0 0xB800 0xBA00 0xBB10 0xBC30
+				0xBC90 0xBD00 0xBDA0 0xBE40 0xBFA0 0xC250
+				0xC4C0 0xC7B0 0xCB70 0xCDD0 0x0100 0x0F10
+				0x1000 0x1300 0x1200 0x3CE0 0x3470 0x1BF0
+				0x1B90 0x1800 0x0C60 0x0DE0 0x0C80 0x0BF0
+				0x0450 0x0450 0x0080 0x0080 0x0080 0x0080
+				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
+				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
+			>;
+		};
 	};
 
 	mmi_wls_chrg@6d {
