arm/dts: apq8084-moto: add memory reserve dtsi
add a dtsi of memory reservation for apq8084 moto devices.

Change-Id: I483a81b72c59ccc1a96ba217092df67228c3ad4d
Signed-off-by: Yi-wei Zhao <gbjc64@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/622460
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-reserve.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-reserve.dtsi
@@ -10,17 +10,8 @@
  * GNU General Public License for more details.
  */
 
-/dts-v1/;
+/* Reserve for ramoops memory */
+/memreserve/ 0x3eae0000 0x20000;
 
-#include "apq8084-moto-reserve.dtsi"
-#include "apq8084.dtsi"
-#include "apq8084-quark.dtsi"
-
-/ {
-	qcom,msm-id = <178 0x42 0x8000>,
-		  <178 0x44 0x8000>; /* MAXX */
-};
-
-&pcie0 {
-	vreg-0.9-supply = <&pma8084_l4>;
-};
+/* Reserve for bootinfo backup in last_kmsg */
+/memreserve/ 0x3eb00000 0x800;
