--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -80,6 +80,7 @@ CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_MMI_SOC_INFO=y
+CONFIG_MMI_RAM_INFO=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_PCI=y
