arm/dts:apq8084-moto: configure ramoops
configure the start address and size (128KB) of ramoops.
the start address is just inherited from previous products,
and the memory should be reserved in other place.

Change-Id: I7b7a2b4db4081bfb239b6529886ea74da731c7b4
Signed-off-by: Yi-wei Zhao <gbjc64@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/622459
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -34,6 +34,14 @@
 };
 
 &soc {
+	ramoops {
+		compatible = "ramoops";
+		status = "ok";
+
+		android,ramoops-buffer-start = <0x3eae0000>;
+		android,ramoops-buffer-size = <0x20000>;
+		android,ramoops-console-size = <0x20000>;
+	};
 	sound {
 		qcom,model = "apq8084-taiko-tfa9890_codec-snd-card";
 		qcom,cdc-micbias2-headset-only;
