arm/dt: apq8084: pstore memory reserve
Add ramoops allocation for annotation. Remove unused mem
reserve for deprecated bootinfo.

Change-Id: I1af9c11038c224543f566a9c2a73d891b287553d
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/625486
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -39,8 +39,9 @@
 		status = "ok";
 
 		android,ramoops-buffer-start = <0x3eae0000>;
-		android,ramoops-buffer-size = <0x20000>;
+		android,ramoops-buffer-size = <0x40000>;
 		android,ramoops-console-size = <0x20000>;
+		android,ramoops-annotate-size = <0x800>;
 	};
 	sound {
 		qcom,model = "apq8084-taiko-tfa9890_codec-snd-card";
