--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -460,7 +460,6 @@
 	gpio@c400 { /* GPIO 5 */
 		/* Buttons Backlight PWM */
 		qcom,mode = <1>; 		/* Digital output */
-		qcom,pull = <0>;		/* No pull */
 		qcom,vin-sel = <2>;		/* PMA8084 S4 = 1.8 V */
 		qcom,src-sel = <2>;		/* FUNC1 = LPG2 output */
 		qcom,output-type = <0>;		/* CMOS logic */
@@ -498,7 +497,7 @@
 	gpio@ca00 { /* GPIO 11 */
 		/* VBUS interrupt */
 		qcom,mode = <0>;
-		qcom,pull = <1>;
+		qcom,pull = <4>;		/* QPNP_PIN_PULL_DN */
 		qcom,vin-sel = <2>;
 		qcom,src-sel = <0>;
 	};
@@ -518,7 +517,7 @@
 	gpio@cd00 { /* GPIO 14 */
 		/* SMB349 STAT */
 		qcom,mode = <0>;
-		qcom,pull = <1>;
+		qcom,pull = <5>;		/* N0 PULL*/
 		qcom,vin-sel = <2>;
 		qcom,src-sel = <0>;
 	};
@@ -579,7 +578,7 @@
 
 	gpio@d400 { /* GPIO 21 */
 		qcom,mode = <0>;
-		qcom,pull = <0>;
+		qcom,pull = <4>;		/* QPNP_PIN_PULL_DN */
 		qcom,vin-sel = <2>;
 		qcom,src-sel = <0>;
 	};
@@ -625,17 +624,20 @@
 
 	mpp@a500 { /* MPP 6 */
 		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <1>;	  /* No pull */
 		qcom,vin-sel = <2>;
 		qcom,master-en = <1>;
 	};
 
 	mpp@a600 { /* MPP 7 */
 		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <1>;	/* No pull */
 		qcom,vin-sel = <2>;
 		qcom,master-en = <1>;
 	};
 
-	mpp@a700 { /* MPP 8 */
+	mpp@a700 { /* MPP 8 */		/* Sign Of Life LED Sink*/
+		qcom,mode = <6>;	/* QPNP_PIN_MODE_SINK */
 	};
 };
 
