--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -368,6 +368,7 @@ CONFIG_SMB349_USB_CHARGER=y
 CONFIG_SMB350_CHARGER=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_BATTERY_MAX17042=y
+CONFIG_BATTERY_MAX17042_DEBUGFS=y
 CONFIG_MMI_WLS_CHARGER=y
 CONFIG_MMI_FACTORY=y
 CONFIG_BATTERY_BQ28400=y
