--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -763,7 +763,7 @@
 
 		interrupt-parent = <&spmi_bus>;
 		interrupts = <0x0 0xa1 0x0>;	/* PMA8084 MPP 2 */
-		gpios = <&pma8084_mpps 2 0x1>;	/* GPIOF_DIR_IN */
+		gpios = <&pma8084_mpps 2 0x11>;	/* GPIOF_DIR_IN|GPIOF_EXPORT */
 		gpio-names = "cc-alert";
 		maxim,regs-init-data = <
 			0x01 0xff97 /* VALRT, VMAX = 5.1 V and VMIN = 3.02 V */
@@ -772,6 +772,7 @@
 		maxim,batt_undervoltage_zero_soc;
 
 		maxim,configuration {
+			/* Required properties */
 			/* Temp Table from Maxim for 3900 mAhr Battery */
 			config		= /bits/ 16 <0x0214>;
 			full_soc_thresh	= /bits/ 16 <0x5A00>;	/* app note constant */
@@ -798,6 +799,9 @@
 				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
 				0x0080 0x0080 0x0080 0x0080 0x0080 0x0080
 			>;
+			/* Optional properties */
+			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
+			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
 		};
 	};
 
