--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -803,6 +803,22 @@
 			tgain		= /bits/ 16 <0xE71C>;	/* thermistor attribute */
 			toff		= /bits/ 16 <0x251A>;	/* thermistor attribute */
 		};
+
+		maxim,temp-conv {
+			start	= /bits/ 16 <(-20)>;	/* in degrees C */
+			result	= /bits/ 16 <
+				/* 1/10th C "real" temps corresponding start, start + 1, etc. fuel gauge temps in C */
+				(-302) (-271) (-246) (-222) (-202) (-180) (-162) (-147) (-129) (-114)	/* -20 C ... -11 C */
+				(-101) (-86)  (-72)  (-59)  (-48)  (-35)  (-23)  (-12)  (-2)   10	/* -10 C ... -1  C */
+				22     32     42     51     62     72     82     91     99     110	/*  0  C ...  9  C */
+				120    129    138    146    156    165    175    184    192    200	/*  10 C ...  19 C */
+				210    220    230    238    247    256    266    275    285    294	/*  20 C ...  29 C */
+				303    313    324    333    343    353    364    375    385    395	/*  30 C ...  39 C */
+				407    419    430    441    453    466    479    492    505    520	/*  40 C ...  49 C */
+				534    548    565    581    597    616    635    654    676    697	/*  50 C ...  59 C */
+				721    747    775    800						/*  60 C ...  63 C */
+			>;
+		};
 	};
 
 	mmi_wls_chrg@6d {
