arm/dts: apq8084/moto: Fix I2C Addr WC
The I2C address of the MMI WLS Driver is wrong.
The Part is actually at address 0x6C.

Change-Id: I0d9464cfa3a37eb1cad68bf8cb2aeef2790010c6
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/627562
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -813,9 +813,9 @@
 		};
 	};
 
-	mmi_wls_chrg@6d {
+	mmi_wls_chrg@6c {
 		compatible = "mmi,wls-charger-bq51021";
-		reg = <0x6d>;
+		reg = <0x6c>;
 		gpios = <&pma8084_gpios 1 0x1>, /* GPIOF_IN */
 			<&pma8084_mpps 4 0x2>, /* GPIOF_OUT_INIT_HIGH */
 			<&msmgpio 66 0x0>; /* GPIOF_OUT_INIT_LOW */
