arm/dts: apq8084/moto: Set Batt Current
Add the Battery Curretn Configuration for APQ8084
Moto products.

Change-Id: I0a3bdb7dd6c9989360400f18731bc242c51e0ecc
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/627973
Tested-by: Jira Key <jirakey@motorola.com>
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -746,6 +746,7 @@
 		qcom,dc-psy-type = "Wireless";
 		qcom,dc-psy-ma = <600>;
 		qcom,bms-psy-name = "max170xx_battery";
+		qcom,max-batt-curr-ma = <2500>;
 	};
 
 	max17050: max17050-battery@36 {
