--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
@@ -49,6 +49,13 @@
 		qcom,mdss-dsi-tx-eot-append;
 		qcom,mdss-dsi-panel-timings = [DA 41 38 00 5B 53 37 43 56 03
 									04 00];
+
+		qcom,mdss-dsi-hbm-on-command = [
+			/* HBM setting in 2 MSB bits of reg 53 */
+			15 01 00 00 00 00 02 53 e0];
+		qcom,mdss-dsi-hbm-off-command = [
+			15 01 00 00 00 00 02 53 20];
+
 		qcom,mdss-dsi-reset-sequence = <1 11>;
 		qcom,mdss-dsi-dis-reset-sequence = <0 3>;
 		qcom,mdss-dsi-t-clk-post = <0x03>;
