dts: qcom: 8084: Add Quark sensor hub version to devtree
For Quark P0 and P1 a sensor hub version name needs to be added
to the device tree. P2 will use the default name.

Change-Id: Id465f8eaf4eaaf0bb99773cfbe55e1e6c2d7d4a1
Signed-off-by: Robert Wiegand <qa2113@motorola.com>
Reviewed-on: http://gerrit.mot.com/630352
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: George Standish <george.standish@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
@@ -23,6 +23,12 @@
 	/delete-node/ cycapsense_prog;
 };
 
+&i2c_12 {
+	stm401@39 {
+		stm401_fw_version = "_p1";
+	};
+};
+
 &pcie0 {
 	vreg-0.9-supply = <&pma8084_l4>;
 };
