arm/dt: 8084: moto: Update BATT_WARN gpio
Update the BATT_DISCON_WARN_N GPIO used by the factory support driver
for all new hardware variants. Starting with P2 Quark - and all future
hardware spins - this gpio has moved from pma8084 mpp6 to APQ gpio 34.

Change-Id: Ic9319eb17b183122377474635b1ede615b7e2d6d
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-on: http://gerrit.mot.com/630415
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
@@ -32,3 +32,11 @@
 &pcie0 {
 	vreg-0.9-supply = <&pma8084_l4>;
 };
+
+&soc {
+	factory_support {
+		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
+			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
+			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
+	};
+};
