--- a/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
@@ -27,4 +27,10 @@
 	sound {
 		qcom,ext_hs_detect = "tpa6165";
 	};
+
+	factory_support {
+		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
+			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
+			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
+	};
 };
