--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -281,7 +281,7 @@
 		compatible = "mmi,factory-support-kungpow";
 		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
 			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
-			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
+			<&msmgpio 34 0x1>; /* GPIOF_IN */
 		gpio-names = "factory_kill_disable",
 				"factory_cable_detect",
 				"factory_warn";
