arm/dt: 8084: moto: Update CC_ALERT gpio
Update the CC_ALERT GPIO used by the Maxim 17050 Fuel Gauage. Starting
with P2 Quark, this GPIO has moved from the PMA MPP 2 over to APQ GPIO
123. Update all the old hardware revisions to point at MPP2 and all
future revisions will pick up the common APQ GPIO 123.

Change-Id: I7731ed7c4dab85d516c3fe6927a349301cc5a96c
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-on: http://gerrit.mot.com/630417
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -44,6 +44,12 @@
 	status = "disabled";
 };
 
+&max17050 {
+	interrupt-parent = <&spmi_bus>;
+	interrupts = <0x0 0xa1 0x0>;    /* PMA8084 MPP 2 */
+	gpios = <&pma8084_mpps 2 0x1>;  /* GPIOF_DIR_IN */
+};
+
 &soc {
 	factory_support {
 		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
