--- a/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
@@ -23,6 +23,12 @@
 	/delete-node/ cycapsense_prog;
 };
 
+&max17050 {
+	interrupt-parent = <&spmi_bus>;
+	interrupts = <0x0 0xa1 0x0>;    /* PMA8084 MPP 2 */
+	gpios = <&pma8084_mpps 2 0x1>;  /* GPIOF_DIR_IN */
+};
+
 &soc {
 	sound {
 		qcom,ext_hs_detect = "tpa6165";
