arm/dts: 8084: tune the SDC1 bus
Tune the SDC1 host and eMMC return drive strengths for Quark P1,
while leaving the previous settings for older hardware.

Change-Id: If54fbcc64d2ed3ef4867fa8dee14dda9acca71e0
Signed-off-by: Russ Knize <Russ.Knize@motorola.com>
Reviewed-on: http://gerrit.mot.com/630807
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Russell Knize <rknize@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
@@ -84,3 +84,10 @@
 		qcom,master-en = <1>;
 	};
 };
+
+&sdhc_1 {
+	qcom,pad-pull-on = <0x0 0x3 0x3 0x0>; /* no-pull, pull-up, pull-up, no-pull */
+	qcom,pad-pull-off = <0x0 0x3 0x3 0x0>; /* no-pull, pull-up, pull-up, no-pull */
+	qcom,pad-drv-on = <0x7 0x4 0x4>; /* 16mA, 10mA, 10mA */
+	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
+};
