arm/dt: 8084: L3/L4 swap for old PMIC
Some revisions of hardware need the L3/L4 swap for PMIC.  The default
has changed to "new power grid" upstream, so we'll use the old power
grid for our older HW.

Change-Id: I4f6a6ffa069e64a44e685de282f0be90349b725a
Signed-off-by: Chris Fries <cfries@motorola.com>
Reviewed-on: http://gerrit.mot.com/630851
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Thai Leav <w18918@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
@@ -16,6 +16,7 @@
 #include "apq8084-moto-reserve.dtsi"
 #include "apq8084.dtsi"
 #include "apq8084-shamu.dtsi"
+#include "apq8084-moto-old-pwr-grid.dtsi"
 
 / {
 	qcom,msm-id = <178 0x47 0x8100>;
