arm/dt: 8084: moto: Update WCHG_CMPLT_N
Update the WCHG_CMPLT_N GPIO used by the Wireless
Charger. Starting with P2 Quark, this GPIO has moved
from the PMA MPP 4 over to PMA GPIO 17. Update all the
old hardware revisions to point at MPP4 and all future
revisions will pick up the common PMA GPIO 17.

Change-Id: I619f9e0e07a0a7c34874ab4d3877df154f944a4e
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/631211
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-shamu-p1.dts
@@ -41,3 +41,35 @@
 			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
 	};
 };
+
+&i2c_0 {
+	mmi_wls_chrg@6c {
+		gpios = <&pma8084_gpios 1 0x1>, /* GPIOF_IN */
+			<&pma8084_mpps 4 0x2>, /* GPIOF_OUT_INIT_HIGH */
+			<&msmgpio 66 0x0>; /* GPIOF_OUT_INIT_LOW */
+	};
+};
+
+&pma8084_gpios {
+	gpio@d000 { /* GPIO 17 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Output low initially */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,src-sel = <0>;		/* GPIO */
+		qcom,out-strength = <2>;	/* Medium */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+};
+
+&pma8084_mpps {
+	mpp@a300 { /* MPP 4 */
+		/* Wireless Charge Complete N */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <1>;		/* Open Drain NMOS logic */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,src-sel = <0>;		/* Constant */
+		qcom,out-strength = <1>;	/* Low */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+};
