--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -551,12 +551,12 @@
 	};
 
 	gpio@d000 { /* GPIO 17 */
+		/* Wireless Charge Complete N */
 		qcom,mode = <1>;		/* Digital output */
-		qcom,output-type = <0>;		/* CMOS logic */
-		qcom,invert = <0>;		/* Output low initially */
+		qcom,output-type = <1>;		/* Open Drain NMOS logic */
 		qcom,vin-sel = <2>;		/* VIN 2 */
-		qcom,src-sel = <0>;		/* GPIO */
-		qcom,out-strength = <2>;	/* Medium */
+		qcom,src-sel = <0>;		/* Constant */
+		qcom,out-strength = <1>;	/* Low */
 		qcom,master-en = <1>;		/* Enable GPIO */
 	};
 
@@ -618,13 +618,10 @@
 	};
 
 	mpp@a300 { /* MPP 4 */
-		/* Wireless Charge Complete N */
-		qcom,mode = <1>;		/* Digital output */
-		qcom,output-type = <1>;		/* Open Drain NMOS logic */
-		qcom,vin-sel = <2>;		/* VIN 2 */
-		qcom,src-sel = <0>;		/* Constant */
-		qcom,out-strength = <1>;	/* Low */
-		qcom,master-en = <1>;		/* Enable GPIO */
+		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <1>;	  /* No pull */
+		qcom,vin-sel = <2>;
+		qcom,master-en = <0>;		/* Disable GPIO */
 	};
 
 	mpp@a400 { /* MPP 5 */
@@ -821,7 +818,7 @@
 		compatible = "mmi,wls-charger-bq51021";
 		reg = <0x6c>;
 		gpios = <&pma8084_gpios 1 0x1>, /* GPIOF_IN */
-			<&pma8084_mpps 4 0x2>, /* GPIOF_OUT_INIT_HIGH */
+			<&pma8084_gpios 17 0x2>, /* GPIOF_OUT_INIT_HIGH */
 			<&msmgpio 66 0x0>; /* GPIOF_OUT_INIT_LOW */
 		gpio-names = "pad_detect_n",
 				"charge_complete_n",
