arm/dt: 8084: moto: Update Factory Gpios
Update the FACTORY_KILL_DISABLE GPIO used by Kung
Pow. Starting with P2 Quark, this GPIO has moved
from the PMA GPIO 17 over to APQ GPIO 126. Update all the
old hardware revisions to point at PMA GPIO 17 and all
future revisions will pick up the common APQ GPIO 126.

Update the FACTORY_CBL_DET GPIO used by Kung
Pow. Starting with P2 Quark, this GPIO has moved
from the PMA MPP 7 over to APQ GPIO 146. Update all the
old hardware revisions to point at PMA MPP 7 and all
future revisions will pick up the common APQ GPIO 146.

Change-Id: I4c000301ad7fb3361a8794fc8883324b85b9d84e
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/631219
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -279,8 +279,8 @@
 	};
 	factory_support {
 		compatible = "mmi,factory-support-kungpow";
-		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
-			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
+		gpios = <&msmgpio 126 0x0>, /* GPIOF_OUT_INIT_LOW */
+			<&msmgpio 146 0x1>, /* GPIOF_IN */
 			<&msmgpio 34 0x1>; /* GPIOF_IN */
 		gpio-names = "factory_kill_disable",
 				"factory_cable_detect",
