arm/dts: apq8084: moto: Config BPHI
Setup the ADC channels for BPHI and RF_BPHI.
BPHI configures PMA MPP4 as Analog input and
reads its ADC from Channel 0x23.

RF_BPHI configures PMA MPP7 as Analog input and
reads its ADC from Channel 0x26.

Change-Id: I5071fbed7463ce50abf2558a5dfb511c5a9876a0
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.mot.com/631376
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -618,10 +618,9 @@
 	};
 
 	mpp@a300 { /* MPP 4 */
-		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <1>;	  /* No pull */
-		qcom,vin-sel = <2>;
-		qcom,master-en = <0>;		/* Disable GPIO */
+		qcom,mode = <4>;          /* QPNP_PIN_MODE_AIN */
+		qcom,ain-route = <3>;	/* QPNP_PIN_AIN_AMUX_CH8 */
+		qcom,master-en = <1>;		/* Enable */
 	};
 
 	mpp@a400 { /* MPP 5 */
@@ -635,9 +634,8 @@
 	};
 
 	mpp@a600 { /* MPP 7 */
-		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
-		qcom,pull = <1>;	/* No pull */
-		qcom,vin-sel = <2>;
+		qcom,mode = <4>;          /* QPNP_PIN_MODE_AIN */
+		qcom,ain-route = <2>;	/* QPNP_PIN_AIN_AMUX_CH7 */
 		qcom,master-en = <1>;
 	};
 
@@ -650,6 +648,26 @@
 	chan@7 {
 		label = "vph_pwr";
 		reg = <0x7>;
+		qcom,decimation = <0>;
+		qcom,pre-div-channel-scaling = <1>;
+		qcom,calibration-type = "absolute";
+		qcom,scale-function = <0>;
+		qcom,hw-settle-time = <0>;
+		qcom,fast-avg-setup = <0>;
+	};
+	chan@23 {
+		label = "bphi";
+		reg = <0x23>;
+		qcom,decimation = <0>;
+		qcom,pre-div-channel-scaling = <1>;
+		qcom,calibration-type = "absolute";
+		qcom,scale-function = <0>;
+		qcom,hw-settle-time = <0>;
+		qcom,fast-avg-setup = <0>;
+	};
+	chan@26 {
+		label = "rf_bphi";
+		reg = <0x26>;
 		qcom,decimation = <0>;
 		qcom,pre-div-channel-scaling = <1>;
 		qcom,calibration-type = "absolute";
