--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -660,3 +660,4 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_ALSA_TO_H2W=y
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
