--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -12,7 +12,7 @@
  */
 
 #include "apq8084-moto-common.dtsi"
-#include "dsi-panel-mot-smd-720p-video.dtsi"
+#include "dsi-panel-mot-smd-720p-cmd.dtsi"
 
 / {
 	model = "Motorola APQ 8084 Lexington";
@@ -30,7 +30,7 @@
 };
 
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&mot_smd_720p_vid>;
+	qcom,dsi-pref-prim-pan = <&mot_smd_720p_cmd_v0>;
 	qcom,platform-reset-gpio = <&msmgpio 86 0>;
 	qcom,platform-te-gpio = <&msmgpio 12 0>;
 	vbat_disp-supply = <&vbat_disp_vreg>;
