--- a/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
@@ -54,6 +54,7 @@
 };
 
 &mdss_dsi0 {
+	mmi,mipi-d0-sel = <&msmgpio 14 0>;
 	qcom,dsi-pref-prim-pan = <&mot_smd_QHD_0_cmd_v0>;
 	qcom,platform-reset-gpio = <&msmgpio 86 0>;
 	qcom,platform-te-gpio = <&msmgpio 12 0>;
@@ -72,6 +73,7 @@
 
 &mot_smd_QHD_0_cmd_v0 {
 	qcom,cont-splash-enabled;
+	mmi,partial-mode-enabled;
 };
 
 &mot_smd_QHD_1_cmd_v0 {
