arm/dts: 8084: remove tomtom sound
Codec under sound-9330 is not present in HW. Remove
it to avoid repeated probe deferrals and errors during
boot.

Change-Id: Icd47f43b8cd67c3fe44e21e7b3e01f2229fb14a5
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.mot.com/632344
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -56,6 +56,10 @@
 			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
 			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
 	};
+
+	sound-9330 {
+		status = "disabled";
+	};
 };
 
 &i2c_0 {
