ARM: dts: msm: Configure wakeup byte for HSUART in apq8084
Fix wakeup byte configs for HS UART used by BT for MTP and CDP.

CRs-Fixed: 660222
Change-Id: I2a674012a9afeba80bce2aaf16826757d83186cb
Signed-off-by: Naveen Kaje <nkaje@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8084-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mtp.dtsi
@@ -182,6 +182,12 @@
 	status = "ok";
 };
 
+&uart6 {
+	qcom,inject-rx-on-wakeup;
+	qcom,rx-char-to-inject = <0xfd>;
+	status = "ok";
+};
+
 /* CoreSight */
 &tpiu {
 	qcom,seta-gpios = <&msmgpio 4 0>,
