arm: dts: apq8084: refactor lexington device tree
 * Rename base source file as p0 in preparation for adding future
   revisions

 * move most settings to a common source file in preparation adding
   future targets

Change-Id: I6b1d4e4b8c08744db542570d6efbb62e9d5a45e6
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608562
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington-p0.dts
@@ -11,22 +11,15 @@
  * GNU General Public License for more details.
  */
 
-#include "apq8084-moto-common.dtsi"
-#include "dsi-panel-mot-smd-720p-video.dtsi"
+/dts-v1/;
 
-&mdss_mdp {
-	qcom,mdss-pref-prim-intf = "dsi";
-};
+#include "apq8084.dtsi"
+#include "apq8084-lexington.dtsi"
 
-&mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&mot_smd_720p_vid>;
-	qcom,platform-reset-gpio = <&msmgpio 86 0>;
-	vbat_disp-supply = <&vbat_disp_vreg>;
-	vdd_disp-supply = <&vdd_disp_vreg>;
-	vci_disp-supply = <&vci_disp_vreg>;
-
-};
-
-&mdss_dsi1 {
-	status = "disabled";
+/ {
+	model = "Motorola APQ 8084 Lexington";
+	compatible = "qcom,apq8084-lexington",
+		   "qcom,apq8084-moto",
+		   "qcom,apq8084";
+	qcom,board-id = <23 0>;
 };
