--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -11,6 +11,698 @@
  * GNU General Public License for more details.
  */
 
+#include "external-mdm9x25.dtsi"
+#include "apq8084-camera-sensor-cdp.dtsi"
+
+/ {
+	aliases {
+		serial0 = &blsp2_uart1;
+		uart3 = &blsp2_uart3;
+	};
+
+	bt_qca6174 {
+		compatible = "qca,qca6174";
+		qca,bt-reset-gpio = <&pma8084_gpios 4 0>; /* BT_EN */
+		qca,bt-vdd-pa-supply = <&wlan_vreg>;
+	};
+};
+
+&wlan_vreg {
+	gpio = <&msmgpio 119 0>;
+};
+
+&soc {
+	sound {
+		qcom,model = "apq8084-taiko-cdp-snd-card";
+		qcom,cdc-micbias2-headset-only;
+		qcom,ext-mclk-gpio  = <&msmgpio 47 0>;
+
+		/delete-property/ qcom,sec-auxpcm-gpio-clk;
+		/delete-property/ qcom,sec-auxpcm-gpio-sync;
+		/delete-property/ qcom,sec-auxpcm-gpio-din;
+		/delete-property/ qcom,sec-auxpcm-gpio-dout;
+
+		/delete-property/ qcom,quat-auxpcm-gpio-sclk;
+		/delete-property/ qcom,quat-auxpcm-gpio-ws;
+		/delete-property/ qcom,quat-auxpcm-gpio-dout;
+		/delete-property/ qcom,quat-auxpcm-gpio-din;
+		pinctrl-names = "pmx-quad-mi2s-sleep",
+				"pmx-quad-mi2s-active";
+		pinctrl-0 = <&quad_mi2s_sleep>;
+		pinctrl-1 = <&quad_mi2s_active>;
+		qcom,tfa9890-left-name = "tfa9890.8-0034";
+
+		qcom,audio-routing =
+			"RX_BIAS", "MCLK",
+			"LDO_H", "MCLK",
+			"AIF4 MAD", "MCLK",
+			"AMIC1", "MIC BIAS4 External",
+			"MIC BIAS4 External", "Tertiary Mic",
+			"AMIC2", "MIC BIAS2 External",
+			"MIC BIAS2 External", "Headset Mic",
+			"AMIC3", "MIC BIAS1 External",
+			"MIC BIAS1 External", "Handset Mic",
+			"AMIC4", "MIC BIAS3 External",
+			"MIC BIAS3 External", "Secondary Mic";
+	};
+
+	qcom,msm-dai-mi2s {
+		compatible = "qcom,msm-dai-mi2s";
+		qcom,msm-dai-q6-mi2s-quat {
+			compatible = "qcom,msm-dai-q6-mi2s";
+			qcom,msm-dai-q6-mi2s-dev-id = <3>;
+			qcom,msm-mi2s-rx-lines = <2>;
+			qcom,msm-mi2s-tx-lines = <1>;
+		};
+	};
+
+	gpio_keys {
+		compatible = "gpio-keys";
+		input-name = "gpio-keys";
+
+		camera_snapshot {
+			label = "camera_snapshot";
+			gpios = <&pma8084_gpios 21 0x1>;
+			linux,input-type = <1>;
+			linux,code = <0x2fe>;
+			gpio-key,wakeup;
+			debounce-interval = <15>;
+		};
+
+		camera_focus {
+			label = "camera_focus";
+			gpios = <&pma8084_gpios 5 0x1>;
+			linux,input-type = <1>;
+			linux,code = <0x210>;
+			gpio-key,wakeup;
+			debounce-interval = <15>;
+		};
+
+		vol_up {
+			label = "volume_up";
+			gpios = <&pma8084_gpios 2 0x1>;
+			linux,input-type = <1>;
+			linux,code = <115>;
+			gpio-key,wakeup;
+			debounce-interval = <15>;
+		};
+	};
+
+	gen-vkeys {
+		compatible = "qcom,gen-vkeys";
+		label = "synaptics_rmi4_i2c";
+		qcom,disp-maxx = <1079>;
+		qcom,disp-maxy = <1919>;
+		qcom,panel-maxx = <1079>;
+		qcom,panel-maxy = <2084>;
+		qcom,key-codes = <158 139 102 217>;
+	};
+
+	spi_eth_vreg: spi_eth_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "spi_eth_vreg";
+		startup-delay-us = <60>;
+		enable-active-high;
+		gpio = <&msmgpio 39 0>;
+	};
+
+	gnss_qca1530: qca,qca1530 {
+		compatible = "qca,qca1530";
+		qca,reset-gpio = <&msmgpio 133 0>;	/* Reset line */
+		qca,reset-supply = <&pma8084_l9>;	/* Reset power regulator */
+		qca,pwr-supply = <&pma8084_l26>;	/* Power regulator */
+	};
+
+	vbat_disp_vreg: vbat_disp_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "vbat_disp";
+		gpio = <&msmgpio 96 0x0>;
+		startup-delay-us = <300>;
+		enable-active-high;
+		regulator-always-on;
+		regulator-boot-on;
+	};
+
+	vdd_disp_vreg: vdd_disp_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "vdd_disp";
+		gpio = <&msmgpio 142 0x0>;
+		parent-supply = <&pma8084_lvs3>;
+		startup-delay-us = <300>;
+		enable-active-high;
+		regulator-always-on;
+		regulator-boot-on;
+	};
+
+	vci_disp_vreg: vci_disp_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "vci_disp";
+		gpio = <&msmgpio 145 0x0>;
+		parent-supply = <&pma8084_l17>;
+		startup-delay-us = <300>;
+		enable-active-high;
+		regulator-always-on;
+		regulator-boot-on;
+	};
+
+	i2c_8: i2c@f9964000 { /* BLSP8 */
+		status = "ok";
+		cell-index = <8>;
+		compatible = "qcom,i2c-qup";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		reg = <0xf9964000 0x1000>;
+		interrupt-names = "qup_err_intr";
+		interrupts = <0 102 0>;
+		qcom,i2c-bus-freq = <400000>;
+		qcom,i2c-src-freq = <19200000>;
+		qcom,sda-gpio = <&msmgpio 53 0>;
+		qcom,scl-gpio = <&msmgpio 54 0>;
+		qcom,master-id = <84>;
+	};
+
+	i2c_12: i2c@f9968000 { /* BLSP12 */
+		status = "ok";
+		cell-index = <12>;
+		compatible = "qcom,i2c-qup";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		reg = <0xf9968000 0x1000>;
+		interrupt-names = "qup_err_intr";
+		interrupts = <0 106 0>;
+		qcom,i2c-bus-freq = <100000>;
+		qcom,i2c-src-freq = <19200000>;
+		qcom,sda-gpio = <&msmgpio 49 0>;
+		qcom,scl-gpio = <&msmgpio 50 0>;
+		qcom,master-id = <84>;
+	};
+	blsp2_uart3: uart@f995f000 {  /* "UART_AP_*_C55" on BLSP9 (BLSP2 UART3) */
+		compatible = "qcom,msm-hsuart-v14";
+		reg = <0xf995f000 0x1000>,
+			<0xf9944000 0x19000>;
+		reg-names = "core_mem", "bam_mem";
+		interrupt-parent = <&blsp2_uart3>;
+		#address-cells = <0>;
+		interrupts = <0 1 2>;
+		interrupt-names = "core_irq", "bam_irq", "wakeup_irq";
+		#interrupt-cells = <1>;
+		interrupt-map-mask = <0xffffffff>;
+		interrupt-map = <0 &intc 0 115 0
+				1 &intc 0 239 0
+				2 &msmgpio 57 0>;
+		qcom,bam-tx-ep-pipe-index = <4>;
+		qcom,bam-rx-ep-pipe-index = <5>;
+		qcom,msm-bus,name = "blsp2_uart3";
+		qcom,msm-bus,num-cases = <2>;
+		qcom,msm-bus,num-paths = <1>;
+		qcom,msm-bus,vectors-KBps =
+				<86 512 0 0>,
+				<86 512 500 800>;
+	};
+};
+
+&pma8084_lvs3 {
+	regulator-always-on;
+};
+
+&pma8084_l17 {
+	regulator-always-on;
+};
+
+&pma8084_l20 {
+	regulator-always-on;
+};
+
+&uart6 {
+	status = "ok";
+	qcom,tx-gpio = <&msmgpio 43 0x00>;
+	qcom,rx-gpio = <&msmgpio 44 0x00>;
+	qcom,cts-gpio = <&msmgpio 45 0x00>;
+	qcom,rfr-gpio = <&msmgpio 46 0x00>;
+	qcom,inject-rx-on-wakeup = <1>;
+	qcom,rx-char-to-inject = <0xFD>;
+};
+
+&blsp2_uart1 {
+	status = "ok";
+};
+
+&blsp2_uart0 {
+	qcom,tx-gpio = <&msmgpio 130 0>;
+	qcom,rx-gpio = <&msmgpio 131 0>;
+	status = "ok";
+};
+
+&xhci_hsic_host {
+	status = "ok";
+};
+
+&mdm0 {
+	interrupt-map = <0 &msmgpio 111 0x3
+			1 &msmgpio 109 0x3
+			2 &msmgpio 113 0x3
+			3 &msmgpio 115 0x3>;
+	qcom,mdm2ap-errfatal-gpio = <&msmgpio 111 0x00>;
+	qcom,ap2mdm-errfatal-gpio = <&msmgpio 112 0x00>;
+	qcom,mdm2ap-status-gpio   = <&msmgpio 109 0x00>;
+	qcom,ap2mdm-status-gpio   = <&msmgpio 110 0x00>;
+	qcom,ap2mdm-soft-reset-gpio = <&msmgpio 128 0x00>;
+	qcom,mdm2ap-pblrdy-gpio = <&msmgpio 113 0x00>;
+	qcom,ap2mdm-wakeup-gpio = <&msmgpio 108 0x00>;
+	qcom,ap2mdm-vddmin-gpio = <&msmgpio 114 0x00>;
+	qcom,mdm2ap-vddmin-gpio = <&msmgpio 115 0x00>;
+	qcom,ap2mdm-chnlrdy-gpio = <&msmgpio 106 0x00>;
+	status = "ok";
+};
+
+&ufsphy1 {
+	status = "ok";
+};
+
+&ufs1 {
+	status = "ok";
+};
+
+/* CoreSight */
+&tpiu {
+	qcom,seta-gpios = <&msmgpio 4 0>,
+			  <&msmgpio 5 0>,
+			  <&msmgpio 6 0>,
+			  <&msmgpio 7 0>,
+			  <&msmgpio 48 0>,
+			  <&msmgpio 49 0>,
+			  <&msmgpio 50 0>,
+			  <&msmgpio 51 0>,
+			  <&msmgpio 52 0>,
+			  <&msmgpio 53 0>,
+			  <&msmgpio 54 0>,
+			  <&msmgpio 55 0>,
+			  <&msmgpio 56 0>,
+			  <&msmgpio 57 0>,
+			  <&msmgpio 63 0>,
+			  <&msmgpio 64 0>,
+			  <&msmgpio 75 0>,
+			  <&msmgpio 122 0>;
+	qcom,seta-gpios-func = <4 4 4 4 5 4 4 5 5 4 4 4 4 4 4 5 2 1>;
+	qcom,seta-gpios-drv =  <7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7>;
+	qcom,seta-gpios-pull = <0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>;
+	qcom,seta-gpios-dir =  <2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2>;
+
+	qcom,setb-gpios = <&msmgpio 10 0>,
+			  <&msmgpio 11 0>,
+			  <&msmgpio 29 0>,
+			  <&msmgpio 30 0>,
+			  <&msmgpio 39 0>,
+			  <&msmgpio 40 0>,
+			  <&msmgpio 43 0>,
+			  <&msmgpio 44 0>,
+			  <&msmgpio 45 0>,
+			  <&msmgpio 46 0>,
+			  <&msmgpio 67 0>,
+			  <&msmgpio 68 0>,
+			  <&msmgpio 69 0>,
+			  <&msmgpio 70 0>,
+			  <&msmgpio 71 0>,
+			  <&msmgpio 72 0>,
+			  <&msmgpio 102 0>,
+			  <&msmgpio 121 0>;
+	qcom,setb-gpios-func = <4 4 5 4 4 4 4 4 4 4 3 3 2 4 3 3 2 1>;
+	qcom,setb-gpios-drv =  <7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7 7>;
+	qcom,setb-gpios-pull = <0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>;
+	qcom,setb-gpios-dir =  <2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2>;
+};
+
+&sdhc_1 {
+	vdd-supply = <&pma8084_l20>;
+	qcom,vdd-voltage-level = <2950000 2950000>;
+	qcom,vdd-current-level = <200 500000>;
+
+	vdd-io-supply = <&pma8084_s4>;
+	qcom,vdd-io-always-on;
+	qcom,vdd-io-voltage-level = <1800000 1800000>;
+	qcom,vdd-io-current-level = <200 154000>;
+
+	qcom,pad-pull-on = <0x0 0x3 0x3 0x1>; /* no-pull, pull-up, pull-up, pull-down */
+	qcom,pad-pull-off = <0x0 0x3 0x3 0x1>; /* no-pull, pull-up, pull-up, pull-down */
+	qcom,pad-drv-on = <0x7 0x4 0x4>; /* 16mA, 10mA, 10mA */
+	qcom,pad-drv-off = <0x0 0x0 0x0>; /* 2mA, 2mA, 2mA */
+
+	qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 192000000 384000000>;
+	qcom,nonremovable;
+	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
+	status = "ok";
+};
+
+&sdhc_2 {
+	status = "disabled";
+};
+
+&pma8084_gpios {
+	gpio@c000 { /* GPIO 1 */
+	};
+
+	gpio@c100 { /* GPIO 2 */
+		qcom,mode = <0>;
+		qcom,pull = <0>;
+		qcom,vin-sel = <2>;
+		qcom,src-sel = <0>;
+	};
+
+	gpio@c200 { /* GPIO 3 */
+	};
+
+	gpio@c300 { /* GPIO 4 */
+		qcom,mode = <1>;         /* Digital output*/
+		qcom,pull = <4>;         /* Pulldown 10uA */
+		qcom,vin-sel = <2>;      /* VIN2 */
+		qcom,src-sel = <0>;      /* GPIO */
+		qcom,invert = <0>;       /* Invert */
+		qcom,master-en = <1>;    /* Enable GPIO */
+	};
+
+	gpio@c400 { /* GPIO 5 */
+		qcom,mode = <0>;
+		qcom,pull = <0>;
+		qcom,vin-sel = <2>;
+		qcom,src-sel = <0>;
+	};
+
+	gpio@c500 { /* GPIO 6 */
+	};
+
+	gpio@c600 { /* GPIO 7 */
+		/* Backlight PWM */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Do not invert the output */
+		qcom,vin-sel = <2>;		/* PMA8084 S4 = 1.8 V */
+		qcom,src-sel = <2>;		/* Special Function 1=LPG 3 */
+		qcom,out-strength = <3>;	/* High drive strength */
+		qcom,master-en = <1>;
+	};
+
+	gpio@c700 { /* GPIO 8 */
+	};
+
+	gpio@c800 { /* GPIO 9 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Do not invert the output */
+		qcom,vin-sel = <0>;		/* VPH_PWR */
+		qcom,src-sel = <0>;		/* GPIO */
+		qcom,out-strength = <1>;	/* High drive strength */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@c900 { /* GPIO 10 */
+	};
+
+	gpio@ca00 { /* GPIO 11 */
+		/* VBUS interrupt */
+		qcom,mode = <0>;
+		qcom,pull = <1>;
+		qcom,vin-sel = <2>;
+		qcom,src-sel = <0>;
+	};
+
+	gpio@cb00 { /* GPIO 12 */
+	};
+
+	gpio@cc00 { /* GPIO 13 */
+	};
+
+	gpio@cd00 { /* GPIO 14 */
+		/* SMB349 STAT */
+		qcom,mode = <0>;
+		qcom,pull = <1>;
+		qcom,vin-sel = <2>;
+		qcom,src-sel = <0>;
+	};
+
+	gpio@ce00 { /* GPIO 15 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Output low initially */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,src-sel = <2>;		/* Function 1 */
+		qcom,out-strength = <2>;	/* Medium */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@cf00 { /* GPIO 16 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,pull = <5>;		/* No pull */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,out-strength = <3>;	/* High */
+		qcom,src-sel = <3>;       	/* QPNP_PIN_SEL_FUNC_2  */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@d000 { /* GPIO 17 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Output low initially */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,src-sel = <3>;		/* Function 2 */
+		qcom,out-strength = <2>;	/* Medium */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@d100 { /* GPIO 18 */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Output low initially */
+		qcom,vin-sel = <2>;		/* VIN 2 */
+		qcom,src-sel = <3>;		/* Function 2 */
+		qcom,out-strength = <2>;	/* Medium */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@d200 { /* GPIO 19 */
+	};
+
+	gpio@d300 { /* GPIO 20 */
+		/* WLAN_3p3v_vreg regulator enable */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,invert = <0>;		/* Output low initially */
+		qcom,vin-sel = <0>;		/* VPH_PWR */
+		qcom,src-sel = <0>;		/* Constant */
+		qcom,out-strength = <1>;	/* Low */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	gpio@d400 { /* GPIO 21 */
+		qcom,mode = <0>;
+		qcom,pull = <0>;
+		qcom,vin-sel = <2>;
+		qcom,src-sel = <0>;
+	};
+
+	gpio@d500 { /* GPIO 22 */
+	};
+};
+
+&pma8084_mpps {
+	mpp@a000 { /* MPP 1 */
+	};
+
+	mpp@a100 { /* MPP 2 */
+	};
+
+	mpp@a200 { /* MPP 3 */
+		/* HDMI_5v_vreg regulator enable */
+		qcom,mode = <1>;		/* Digital output */
+		qcom,output-type = <0>;		/* CMOS logic */
+		qcom,vin-sel = <0>;		/* VPH_PWR */
+		qcom,src-sel = <0>;		/* Constant */
+		qcom,master-en = <1>;		/* Enable GPIO */
+	};
+
+	mpp@a300 { /* MPP 4 */
+	};
+
+	mpp@a400 { /* MPP 5 */
+	};
+
+	mpp@a500 { /* MPP 6 */
+	};
+
+	mpp@a600 { /* MPP 7 */
+	};
+
+	mpp@a700 { /* MPP 8 */
+	};
+};
+
+&slim_msm {
+	taiko_codec {
+		qcom,cdc-micbias1-ext-cap;
+		qcom,cdc-micbias3-ext-cap;
+		qcom,cdc-micbias4-ext-cap;
+
+		cdc-vdd-spkdrv-supply = <&hdmi_vreg>;
+		qcom,cdc-vdd-spkdrv-voltage = <5000000 5000000>;
+		qcom,cdc-vdd-spkdrv-current = <1250000>;
+
+		qcom,cdc-on-demand-supplies = "cdc-vdd-spkdrv";
+	};
+};
+
+&i2c_0 {
+	smb1357_otg_vreg: smb1357-charger@1c {
+		compatible = "qcom,smb1357-charger";
+		reg = <0x1c>;
+		interrupt-parent = <&spmi_bus>;
+		interrupts = <0x0 0xcd 0x0>;	/* PMA8084 GPIO 14 */
+		qcom,float-voltage-mv = <4200>;
+		qcom,charging-timeout = <1536>;
+		qcom,recharge-thresh-mv = <200>;
+		qcom,iterm-ma = <100>;
+		regulator-name = "smb1357_otg_vreg";
+		qcom,soft-vfloat-comp-disabled;
+		therm-bias-supply = <&pma8084_lvs2>;
+	};
+
+	max17050: max17050-battery@36 {
+		compatible = "maxim,max17050";
+		reg = <0x36>;
+		maxim,rsns-microohm = <10000>;
+	};
+};
+
+&i2c_1 {
+	synaptics@20 {
+		compatible = "synaptics,rmi4";
+		reg = <0x20>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <143 0x2008>;
+		vdd-supply = <&pma8084_l18>;
+		vcc_i2c-supply = <&pma8084_lvs1>;
+		synaptics,display-coords = <0 0 1079 1919>;
+		synaptics,panel-coords = <0 0 1079 2084>;
+		synaptics,reset-gpio = <&msmgpio 145 0x00>;
+		synaptics,irq-gpio = <&msmgpio 143 0x2008>;
+		synaptics,i2c-pull-up;
+		synaptics,disable-gpios;
+		synaptics,power-down;
+		synaptics,fw-image-name = "PR1469074-s3408bt_001F0109.img";
+		status = "disabled";
+	};
+
+	synaptics_dsx_i2c@20 {
+		compatible = "synaptics,synaptics_dsx_i2c";
+		reg = <0x20>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <84 0>;
+		gpios = <&msmgpio 84 0>, /* IRQ */
+			<&msmgpio 97 0>; /* RESET */
+		touch_vdd-supply = <&pma8084_l19>;
+		synaptics,normal-mode = <1>;
+		synaptics,gpio-config;
+	};
+
+	/* TI drv2605 */
+	drv2605@5a {
+		compatible = "ti,drv2605";
+		reg = <0x5A>;
+		gpios = <&msmgpio 75 0>,        /* EN_GPIO */
+			<&msmgpio 74 0>;        /* Trigger */
+		external_trigger = <1>;
+		default_effect = <17>;          /* Strong Click 100% */
+		rated_voltage = <0x70>;         /* 2.4v */
+		overdrive_voltage = <0x89>;     /* 3.0v */
+	};
+};
+
+&i2c_2 {
+	isa1200@48 {
+		status = "okay";
+		reg = <0x48>;
+		vcc_i2c-supply = <&pma8084_s4>;
+		compatible = "imagis,isa1200";
+		label = "vibrator";
+		imagis,chip-en;
+		imagis,need-pwm-clk;
+		imagis,ext-clk-en;
+		imagis,hap-en-gpio = <&msmgpio 48 0x00>;
+		imagis,max-timeout = <15000>;
+		imagis,pwm-div = <256>;
+		imagis,mode-ctrl = <2>;
+		imagis,regulator {
+			regulator-name = "vcc_i2c";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-max-microamp = <9360>;
+		};
+	};
+};
+
+&i2c_8 {
+	tpa6165xx@40 {
+		compatible = "ti,tpa6165";
+		reg = <0x40>;
+		interrupts = <&msmgpio 9 0x0>;
+		gpios = <&msmgpio 9 0x0>;
+		hs_det_vdd-supply = <&pma8084_lvs2>;
+		hs_det_micvdd-supply = <&pma8084_l18>;
+		ti,tpa6165-always-on-micbias = <1>;
+	};
+	bcm2079x@76 {
+		compatible = "brcm,bcm2079x";
+		reg = <0x76>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <8 0>; /* NFC_IRQ */
+		gpios = <&pma8084_mpps 5 0>, /* NFC_WAKE */
+			<&msmgpio 8 0>, /* NFC_IRQ */
+			<&msmgpio 116 0>; /* REG_PU */
+	};
+
+	tfa9890@34 {
+		compatible = "nxp,tfa9890";
+		reg = <0x34>;
+		gpios = <&msmgpio 129 0>;     /* RESET */
+		tfa_vdd-supply = <&pma8084_s4>;
+		nxp,tfa_max-vol-steps = <15>;
+		nxp,tfa-dev = "left";
+	};
+};
+
+&i2c_12 {
+	stm401@39 {
+		compatible = "stm,stm401";
+		reg = <0x39>;
+		gpios = <&msmgpio 141 0>,        /* IRQ */
+			<&msmgpio 136 0>,       /* RESET */
+			<&msmgpio 137 0>,        /* BSLEN */
+			<&msmgpio 139 0>;        /* WakeIRQ */
+		lux_table = <5 50 100 1500 3000 8000>;
+		brightness_table = <9 14 18 46 67 93 140>;
+		bslen_pin_active_value = <1>;
+		ct406_detect_threshold = <0x006E>;
+		ct406_undetect_threshold = <0x0050>;
+		ct406_recalibrate_threshold = <0x0064>;
+		ct406_pulse_count = <0x04>;
+		sensor1-supply = <&pma8084_lvs1>;
+		sensor2-supply = <&pma8084_l18>;
+	};
+};
+
+&spi_0 {
+	ethernet-switch@2 {
+		compatible = "micrel,ks8851";
+		reg = <2>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <60 0>;
+		spi-max-frequency = <4800000>;
+		rst-gpio = <&msmgpio 59 0>;
+		vdd-io-supply = <&spi_eth_vreg>;
+		vdd-phy-supply = <&spi_eth_vreg>;
+	};
+};
 
 &spmi_bus {
 	qcom,pma8084@0 {
@@ -38,10 +730,6 @@
 	};
 };
 
-&i2c_0 {
-	max17050: max17050-battery@36 {
-		compatible = "maxim,max17050";
-		reg = <0x36>;
-		maxim,rsns-microohm = <10000>;
-	};
+&usb3 {
+	vbus_dwc3-supply = <&smb1357_otg_vreg>;
 };
