arm/dt: 8084: moto: Access CC_ALERT gpio on older HW rev.
The interface to cc_alert value is not accessible on
Older HW revisions because the MPP 2 was not exported.

Change-Id: Icf8557b4a23bd7b5abae1e5ce8f3b458691f01b6
Signed-off-by: Vidyadhar Gurram <rnh786@motorola.com>
Reviewed-on: http://gerrit.mot.com/633080
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -84,7 +84,7 @@
 &max17050 {
 	interrupt-parent = <&spmi_bus>;
 	interrupts = <0x0 0xa1 0x0>;    /* PMA8084 MPP 2 */
-	gpios = <&pma8084_mpps 2 0x1>;  /* GPIOF_DIR_IN */
+	gpios = <&pma8084_mpps 2 0x11>;  /* GPIOF_DIR_IN|GPIOF_EXPORT */
 };
 
 &soc {
