shamu_defconfig: Catchup from ES6 to ES7 baseline.
Pick up these changes from
AU_LINUX_ANDROID_LNX.LA.3.6_RB1.04.04.02.066.050:

2ebfd5a defconfig: Enable PAGE_OWNER tracking for MSM targets
2e5664d defconfig: apq8084: Disable bayer camera drivers
4618de0 cnss: Add esoc config option
b06eef6 msm: subsys-pil-tz: Move lpass PIL/SSR support to generic PIL/SSR driver
61dada3 defconfig: 8084: Add native android VPN support
3bc782e defconfig: apq8084: Enable USB EHSET driver
f1f63f3 defconfig: msm: Disable LPAE for apq8084

Change-Id: I279e16dd10a1c59bd7cb65a5cb2bf1282169ec40
Signed-off-by: Chris Fries <cfries@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -49,7 +49,6 @@ CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
-CONFIG_MSM_PIL_LPASS_QDSP6V5=y
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
@@ -232,6 +231,9 @@ CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
+CONFIG_L2TP=y
+CONFIG_L2TP_DEBUGFS=y
+CONFIG_L2TP_V3=y
 CONFIG_BRIDGE=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
@@ -296,9 +298,15 @@ CONFIG_TUN=y
 CONFIG_PPP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOE=y
+CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
+CONFIG_PPP_ASYNC=y
+CONFIG_PPP_SYNC_TTY=y
 CONFIG_SLIP=y
 CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLIP_MODE_SLIP6=y
@@ -405,8 +413,6 @@ CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_ISPIF=y
-CONFIG_IMX135=y
-CONFIG_IMX132=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_WFD=y
 CONFIG_DVB_MPQ=m
@@ -497,6 +503,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_MSM_HSIC=y
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_EHSET=y
 CONFIG_USB_ACM=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_STORAGE_DATAFAB=y
@@ -511,6 +518,7 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 CONFIG_USB_STORAGE_ENE_UB6250=y
+CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CSVT=y
 CONFIG_USB_QCOM_DIAG_BRIDGE=y
@@ -547,6 +555,7 @@ CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_QPNP=y
 CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
+CONFIG_ESOC_CLIENT=y
 CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_UIO=y
@@ -611,6 +620,7 @@ CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_PAGE_OWNER=y
 CONFIG_LOCKUP_DETECTOR=y
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
