defconfig: 8084: Add security driver for APQ8084
                This is Motorola's security driver (/dev/sec)

Change-Id: Ib836ec27dbb4f77ecdfdfd122ed237753313c39f
Signed-off-by: cdv001@motorola.com
Reviewed-on: http://gerrit.mot.com/634787
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Mark Reed <mreed@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -270,6 +270,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_HAPTIC_DRV2605=y
+CONFIG_SEC_DRIVER=y
 CONFIG_QSEECOM=y
 CONFIG_C55_CTRL=y
 CONFIG_QPNP_MISC=y
