--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -554,7 +554,7 @@
 	gpio@d000 { /* GPIO 17 */
 		/* Wireless Charge Complete N */
 		qcom,mode = <1>;		/* Digital output */
-		qcom,output-type = <1>;		/* Open Drain NMOS logic */
+		qcom,output-type = <0>;		/* CMOS */
 		qcom,vin-sel = <2>;		/* VIN 2 */
 		qcom,src-sel = <0>;		/* Constant */
 		qcom,out-strength = <1>;	/* Low */
