--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -695,6 +695,7 @@ source "drivers/misc/altera-stapl/Kconfig"
 source "drivers/misc/mei/Kconfig"
 source "drivers/misc/vmw_vmci/Kconfig"
 source "drivers/misc/qcom/Kconfig"
+source "drivers/misc/sec/Kconfig"
 source "drivers/misc/stm401/Kconfig"
 source "drivers/misc/capsense_prog/Kconfig"
 endmenu
